--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -2,6 +2,7 @@ ja:
   activerecord:
     models:
       user: 'ユーザー'
+      drink_record: '休肝日&飲酒記録'
     attributes:
       user:
         username: 'ユーザー名'
@@ -9,3 +10,10 @@ ja:
         role: 'ユーザーの種類'
         comment: 'ひとこと'
         reminder: 'リマインダー'
+      drink_record:
+        user_id: 'ユーザーID'
+        record_type: '記録の種類'
+        start_time: '記録日'
+        drink_type: '飲酒の種類'
+        drink_volume: '飲酒量'
+        alcohol_percentage: 'アルコール度数'
