--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -9,6 +9,9 @@ ja:
     terms_of_service: '利用規約'
     privacy_policy: 'プライバシーポリシー'
     register: '登録'
+    detail: '詳細'
+    no_alcohol_day: '休肝日'
+    alcohol_day: '飲酒日'
   static_pages:
     top:
       title: 'トップページ'
@@ -27,3 +30,7 @@ ja:
       create_group: 'グループを作成'
       no_alcohol_day_achievement: '休肝日達成率（直近30日間）'
       alcohol_intake: '総アルコール摂取量（直近30日間）'
+  drink_records:
+    new:
+      title: '休肝日&飲酒記録'
+      title_description: '休肝日または飲酒記録を登録しよう！'
