--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -29,8 +29,8 @@ ja:
       title: 'マイページ'
       no_alcohol_day: '休肝日'
       create_group: 'グループを作成'
-      no_alcohol_day_achievement: '休肝日達成率（直近30日間）'
-      alcohol_intake: '総アルコール摂取量（直近30日間）'
+      no_alcohol_day_achievement: '休肝日達成率（今月）'
+      alcohol_intake: '総アルコール摂取量（今月）'
   drink_records:
     new:
       title: '休肝日&飲酒記録'
