--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -10,9 +10,15 @@ ja:
     privacy_policy: 'プライバシーポリシー'
     register: '登録'
     detail: '詳細'
+    edit: '編集'
+    delete: '削除'
     no_alcohol_day: '休肝日'
     alcohol_day: '飲酒日'
     record_date_error: '未来の日付で記録はできません'
+    amount_of_alcohol: 'アルコール摂取量'
+    delete_confirm: '削除しますか？'
+    delete_success: '記録を削除しました'
+    create_success: '記録を登録しました'
   static_pages:
     top:
       title: 'トップページ'
@@ -39,6 +45,8 @@ ja:
       title: '休肝日&飲酒記録編集'
     create:
       error: '休肝日または飲酒記録の登録に失敗しました'
+    show:
+      title: '記録詳細'
   simple_calendar:
     previous: "<<"
     next: ">>"
