Add:グループの編集・削除機能追加

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -65,6 +65,16 @@ ja:
       admin: '管理者'
       member: 'メンバー'
       invite: 'メンバーを招待'
+    edit:
+      title: 'グループ編集'
+      success: 'グループを更新しました'
+      error: 'グループの更新に失敗しました'
+    update:
+      success: 'グループを更新しました'
+      error: 'グループの更新に失敗しました'
+    destroy:
+      success: 'グループを削除しました'
+      error: 'グループの削除に失敗しました'
   simple_calendar:
     previous: "<<"
     next: ">>"
