--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -20,6 +20,7 @@ ja:
     delete_success: '記録を削除しました'
     create_success: '記録を登録しました'
     update_success: '記録を更新しました'
+    access_denied: 'アクセス権限がありません'
   static_pages:
     top:
       title: 'トップページ'
@@ -75,6 +76,12 @@ ja:
     destroy:
       success: 'グループを削除しました'
       error: 'グループの削除に失敗しました'
+  invitees:
+    invitations:
+      new:
+        title: 'メンバー招待'
+        success: '招待しました'
+        error: '招待に失敗しました'
   simple_calendar:
     previous: "<<"
     next: ">>"
