--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -3,6 +3,8 @@ ja:
     top_page: 'トップページ'
     community: 'コミュニティ'
     login_with_line: 'LINEでログイン'
+    login_success: 'ログインしました'
+    login_failed: 'ログインに失敗しました'
     group: 'グループ'
     my_page: 'マイページ'
     record: '記録'
