--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -69,6 +69,7 @@ ja:
       no_alcohol_day: '休肝日'
       no_alcohol_day_achievement: '休肝日達成率（今月）'
       alcohol_intake: '総アルコール摂取量（今月）'
+      group_name: 'グループ名'
       admin: '管理者'
       member: 'メンバー'
       invite: 'メンバーを招待'
@@ -93,6 +94,8 @@ ja:
         title: 'メンバー招待'
         success: '招待しました'
         error: '招待に失敗しました'
+      first_login:
+        title: 'ユーザー情報登録'
   simple_calendar:
     previous: "<<"
     next: ">>"
