--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -29,6 +29,8 @@ ja:
     comment_delete: 'コメントを削除しました'
     no_alcohol_day_achievement: '休肝日達成率（今月）'
     alcohol_intake: '総アルコール摂取量（今月）'
+    like_post: 'いいね！しました'
+    unlike_post: 'いいね！を取り消しました'
   static_pages:
     top:
       title: 'トップページ'
