--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -31,6 +31,7 @@ ja:
     comment_delete: 'コメントを削除しました'
     no_alcohol_day_achievement: '休肝日達成率（今月）'
     alcohol_intake: '総アルコール摂取量（今月）'
+    total_price: '飲酒代（今月）'
     likes: 'いいね！'
     like_post: 'いいね！しました'
     unlike_post: 'いいね！を取り消しました'
