--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -2,6 +2,7 @@ ja:
   defaults:
     top_page: 'トップページ'
     community: 'コミュニティ'
+    explanation: 'アプリの使い方'
     login_with_line: 'LINEでログイン'
     login_success: 'ログインしました'
     login_failed: 'ログインに失敗しました'
