Add:飲酒記録の複数投稿機能

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -16,6 +16,7 @@ ja:
     contact: 'お問い合わせ'
     register: '登録'
     detail: '詳細'
+    add_record: '飲酒記録を追加'
     edit: '編集'
     delete: '削除'
     no_alcohol_day: '休肝日'
