--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -106,6 +106,11 @@ ja:
       title: 'コミュニティ'
       no_post: '投稿なし'
       post: 'ポストする'
+    new:
+      title: '新規ポスト'
+    create:
+      success: 'ポストを投稿しました'
+      error: 'ポストの投稿に失敗しました'
   invitees:
     invitation:
       new:
