Fix&Add:RSpec実行環境の修正とコミュニティポスト機能のシステムスペック

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -29,6 +29,7 @@ ja:
     update_success: '記録を更新しました'
     access_denied: 'アクセス権限がありません'
     post: '投稿'
+    post_comment: 'コメントする'
     no_post: 'まだ投稿がありません'
     comment_success: 'コメントしました'
     comment_error: 'コメントに失敗しました'
