Fix:エラーメッセージの表示の修正

--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -9,6 +9,7 @@ ja:
       user:
         username: 'ユーザー名'
         image: 'ユーザーアイコン'
+        non_drinking_days: '休肝日'
         role: 'ユーザーの種類'
         comment: 'ひとこと'
         reminder: 'リマインダー'
