Change:記録フォームにおいて飲酒ガイドラインの表示

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -22,7 +22,7 @@ ja:
     no_alcohol_day: '休肝日'
     alcohol_day: '飲酒日'
     record_error: '記録の登録に失敗しました'
-    amount_of_alcohol: 'アルコール摂取量'
+    amount_of_alcohol: '純アルコール量'
     delete_confirm: '削除しますか？'
     delete_success: '記録を削除しました'
     create_success: '記録を登録しました'
@@ -35,7 +35,7 @@ ja:
     comment_error: 'コメントに失敗しました'
     comment_delete: 'コメントを削除しました'
     no_alcohol_day_achievement: '休肝日達成率（今月）'
-    alcohol_intake: '総アルコール摂取量（今月）'
+    alcohol_intake: '純アルコール量（今月）'
     total_price: '飲酒代（今月）'
     likes: 'いいね！'
     like_post: 'いいね！しました'
